[package]
name = "create2crunch"
version = "0.2.0"
authors = ["0age <0age@protonmail.com"]
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.4", features = ["rand"] }
byteorder = "1"
console = "0.15"
fs2 = "0.4.3"
ocl = "0.19"
rand = "0.8"
rayon = "1.0"
terminal_size = "0.3.0"
tiny-keccak = "2.0"
