[package]
name = "create2crunch"
version = "0.3.0"
authors = ["0age <0age@protonmail.com"]
edition = "2021"
rust-version = "1.65"

[dependencies]
alloy-primitives = { version = "0.4", features = ["rand"] }
byteorder = "1"
console = "0.15"
fs4 = "0.7"
ocl = "0.19"
rand = "0.8"
rayon = "1.0"
rustc-hash = "1.1"
separator = "0.4.1"
terminal_size = "0.3.0"
tiny-keccak = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
